# owui-responses

./: .gitignore  AGENTS.md  anthropic_function.py  context.py  gemini.py  opencode.jsonc  pyproject.toml  responses.py  upload.py  upload.sh
scripts/: build_functions.py
src/owui_manifolds/: __init__.py
src/owui_manifolds/filters/: __init__.py  context.py  context_constants.py  context_marker.py  context_matching.py  context_modeling.py  context_persistence.py  context_runtime.py  context_status.py  context_summary.py  context_tokens.py  context_tooling.py  context_valves.py  context_window.py
src/owui_manifolds/providers/: __init__.py
src/owui_manifolds/providers/anthropic/: __init__.py  pipe.py
src/owui_manifolds/providers/gemini/: __init__.py  pipe.py
src/owui_manifolds/providers/responses/: __init__.py  pipe.py
src/owui_manifolds/shared/: __init__.py  content.py  events.py  history_store.py  ids.py  optional_openwebui.py  rendering.py  tools.py
tests/: test_build_and_shared.py  test_context_matching.py  test_context_window.py  test_direct_tool_dispatch.py  test_direct_tool_dispatch_responses_gemini.py  test_empty_output_backfill.py  test_gemini_streaming.py  test_native_tool_loop_ownership.py  test_recorded_live_tool_roundtrips.py  test_shared_context_compaction.py  test_tool_result_persistence.py
tests/fixtures/: responses_badreq_open_terminal.json
tests/fixtures/live_tool_roundtrips/: anthropic.json  gemini.json  responses.json
