[project]
name = "responses"
version = "1.0.0"
description = "Open WebUI API manifolds"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.103",
    "google-genai~=2.8",
    "openai~=2.41",
    "pydantic~=2.13",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "python-dotenv>=1.0",
    "requests>=2.32",
]

